--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         <a href="Travel Website/Index.html" class="btn custom-btn text-decoration-none">Project 1</a>
       </div>
       <div class="col-12 col-md-3 d-flex justify-content-center">
-        <a href="#" class="btn custom-btn text-decoration-none">Project 2</a>
+        <a href="GenshinAPI/assets/index.html" class="btn custom-btn text-decoration-none">Project 2</a>
       </div>
       <div class="col-12 col-md-3 d-flex justify-content-center">
         <a href="#" class="btn custom-btn text-decoration-none">Project 3</a>
