--- a/index.html
+++ b/index.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Homepage</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-        <!-- header -->
+    <!-- header -->
     <header>
         <div class="logo"></div>
         <ul class="menu">
-            <li>Home</li>
-            <li>About</li>
-            <li>Contact</li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
-        <div class="search">
-            <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
-                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
-            </svg>
-        </div>
     </header>
+
 
     <!-- slider -->
 
@@ -30,94 +28,99 @@
             <div class="item active">
                 <img src="image/img1.png">
                 <div class="content">
-                    <p>design</p>
-                    <h2>Slider 01</h2>
+                    <p>Travel Website</p>
+                    <h2>Project 01</h2>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, neque?
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, ex.
                     </p>
+                    <a href="#" class="btn custom-btn">Project 1</a>
                 </div>
             </div>
             <div class="item">
                 <img src="image/img2.jpg">
                 <div class="content">
-                    <p>design</p>
-                    <h2>Slider 02</h2>
+                    <p>API</p>
+                    <h2>Project 02</h2>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, neque?
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, ex.
                     </p>
+                    <a href="#" class="btn custom-btn">Project 2</a>
                 </div>
             </div>
             <div class="item">
                 <img src="image/img3.jpg">
                 <div class="content">
                     <p>design</p>
-                    <h2>Slider 03</h2>
+                    <h2>Project 03</h2>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, neque?
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, ex.
                     </p>
+                    <a href="#" class="btn custom-btn">Project 3</a>
                 </div>
             </div>
             <div class="item">
                 <img src="image/img4.jpg">
                 <div class="content">
                     <p>design</p>
-                    <h2>Slider 04</h2>
+                    <h2>Project 04</h2>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, neque?
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, ex.
                     </p>
+                    <a href="#" class="btn custom-btn">Project 4</a>
                 </div>
             </div>
             <div class="item">
                 <img src="image/img5.jpg">
                 <div class="content">
                     <p>design</p>
-                    <h2>Slider 05</h2>
+                    <h2>Project 05</h2>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, neque?
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, ex.
                     </p>
+                    <a href="#" class="btn custom-btn">Project 5</a>
                 </div>
             </div>
         </div>
         <!-- button arrows -->
         <div class="arrows">
             <button id="prev"><</button>
-            <button id="next">></button>
+                    <button id="next">></button>
         </div>
         <!-- thumbnail -->
         <div class="thumbnail">
             <div class="item active">
                 <img src="image/img1.png">
                 <div class="content">
-                    Name Slider
+                    Project 1
                 </div>
             </div>
             <div class="item">
                 <img src="image/img2.jpg">
                 <div class="content">
-                    Name Slider
+                    project 2
                 </div>
             </div>
             <div class="item">
                 <img src="image/img3.jpg">
                 <div class="content">
-                    Name Slider
+                    project 3
                 </div>
             </div>
             <div class="item">
                 <img src="image/img4.jpg">
                 <div class="content">
-                    Name Slider
+                    project 4
                 </div>
             </div>
             <div class="item">
                 <img src="image/img5.jpg">
                 <div class="content">
-                    Name Slider
+                    project 5
                 </div>
             </div>
         </div>
@@ -126,4 +129,5 @@
 
     <script src="app.js"></script>
 </body>
+
 </html>
