update index and style

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+    <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -31,8 +31,8 @@
                     <p>Travel Website</p>
                     <h2>Project 01</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, neque?
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, ex.
+                        Explore the best of Japan with Japan Unveiled! From Tokyo's skyline to Kyoto's ancient temples,
+                        discover expert tips, top destinations, and unforgettable experiences. Start your journey today!
                     </p>
                     <a href="#" class="btn custom-btn">Project 1</a>
                 </div>
@@ -43,8 +43,8 @@
                     <p>API</p>
                     <h2>Project 02</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, neque?
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, ex.
+                        Get real-time weather updates with our Weather API! ☀️🌧️ Access current conditions, forecasts, 
+                        and insights for any location worldwide. Simple, accurate, and easy to use!
                     </p>
                     <a href="#" class="btn custom-btn">Project 2</a>
                 </div>
