--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="item">
                 <img src="image/img2.jpg">
                 <div class="content">
-                    <p>API</p>
+                    <p>Weather API</p>
                     <h2>Project 02</h2>
                     <p>
                         Get real-time weather updates with our Weather API! ☀️🌧️ Access current conditions, forecasts, 
